--- a/mvnhtml.css
+++ b/mvnhtml.css
@@ -3,7 +3,7 @@ p {
     left:100px;
 }
 span.romannumber{
-    color:orange;
+    color:darkorange;
 }
 p[title="head"]{
     color: green;
@@ -20,7 +20,7 @@ span.foreign-la{
 }
 span.verseline {
    position:absolute;
-    left:400px;
+    left:550px;
 }
 span.linenumnewline {
    position:absolute;
@@ -40,7 +40,7 @@ span.ex{
 span.fwheader{
   padding-top: 30px;
   color: maroon;
-  display: block;
+  display: table;
   font-size:80%;
   position:relative;
   left:200px;
@@ -64,7 +64,7 @@ span.note {
     text-decoration:none;
     color:maroon;
    position:absolute;
-    left:500px;
+    left:600px;
 }
 span.underline {
   display: inline;
@@ -80,7 +80,7 @@ span.ulr {
 }
 span.rubric {
   display: inline;
-  color:red;
+  color:crimson;
 }
 span.capitalsize1 {
   font-size:100%;
@@ -93,7 +93,13 @@ span.capitalsize3 {
   font-size:160%;
 }
 span.capitalsize4 {
-  font-size:190%;
+	color: crimson;
+	float: left;
+	font-size: 5em;
+	font-weight:bold;
+	line-height: 0.8em;
+	margin-right: 0.05em;
+	margin-top: 0.075em;
 }
 span.capitalsize5 {
   font-size:220%;
@@ -113,4 +119,28 @@ span.junicode {
 span.add {
     text-decoration:underline;
     color:green;
+}
+
+html {background: #d8dfe5}
+h2 {
+	font-family: "Georgia", serif;
+	font-size: 60px;
+	font-style: italic;
+	font-weight: bold;
+	margin: 30px 20px 10px;
+	text-align: center;
+}
+body > h2+div {
+	background: aliceblue;
+	border: 5px solid #444444;
+	padding: 10px;
+	
+}
+body > div+div {
+	background: white;
+	display:table;
+	width: 800px;
+	margin:auto;
+	border: 1px solid #2A2A2A;
+	box-shadow: 0px 0px 5px #B1B1B1;
 }
